nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: ghcr.io/pmh-only/nextcloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-pvc
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-pvc
        persistentVolumeClaim:
          claimName: nextcloud-pvc
